--- a/package.json
+++ b/package.json
@@ -18,51 +18,64 @@
     "url": "https://github.com/ionic-team/ionic-conference-app.git"
   },
   "private": true,
+  "browser": {},
   "dependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/pwa": "^0.803.23",
-    "@angular/router": "^8.2.14",
-    "@angular/service-worker": "^8.2.14",
+    "@angular/animations": "^9.1.4",
+    "@angular/cdk": "^9.2.2",
+    "@angular/common": "^9.1.4",
+    "@angular/core": "^9.1.4",
+    "@angular/forms": "^9.1.4",
+    "@angular/material": "^9.2.2",
+    "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.1.4",
+    "@angular/router": "^9.1.4",
+    "@angular/service-worker": "^9.1.4",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/in-app-browser": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "^5.0.6",
+    "@ionic/angular": "^5.1.0",
     "@ionic/storage": "^2.1.3",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "aws-sign2": "^0.7.0",
+    "cipher-base": "^1.0.4",
     "cordova-android": "^8.1.0",
+    "cordova-browser": "5.0.4",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "core-js": "^3.6.4",
-    "rxjs": "^6.5.4",
+    "core-js": "^3.6.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
+    "hash-base": "^3.1.0",
+    "oauth": "^0.9.15",
+    "rxjs": "^6.5.5",
+    "stream": "0.0.2",
     "sw-toolbox": "3.6.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "toast-controller": "^0.11.6",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.23",
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular-devkit/core": "^8.3.23",
-    "@angular-devkit/schematics": "^8.3.23",
-    "@angular/cli": "^8.3.23",
-    "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/architect": "^0.803.26",
+    "@angular-devkit/build-angular": "^0.901.4",
+    "@angular-devkit/core": "^9.1.4",
+    "@angular-devkit/schematics": "^9.1.4",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler": "^9.1.3",
+    "@angular/compiler-cli": "^9.1.4",
+    "@angular/language-service": "^9.1.4",
     "@ionic/angular-toolkit": "^2.1.2",
     "@ionic/lab": "^2.0.19",
     "@types/jasmine": "3.4.6",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "^12.12.26",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.12.37",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
@@ -70,16 +83,18 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
-    "protractor": "^5.4.3",
+    "protractor": "^5.4.4",
     "puppeteer": "^1.20.0",
     "ts-node": "8.5.0",
     "tslint": "^5.20.1",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3",
+    "webpack": "^4.43.0"
   },
   "cordova": {
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "browser"
     ],
     "plugins": {
       "cordova-plugin-device": {},
